--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+            integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+            crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div class="strip">
+        <h1>Rock - Paper - Scissors</h1>
+    </div>
 
+    <div class="container">
+        <div id="rock" class="choice">
+            <i class="far fa-hand-rock icon"></i>
+        </div>
+        <div id="paper" class="choice">
+            <i class="far fa-hand-paper icon"></i>
+        </div>
+        <div id="scissors" class="choice">
+            <i class="far fa-hand-scissors icon"></i>
+        </div>
+    </div>
+
+    <div class="display">
+
+    </div>
 
     <script type="text/javascript" src="rockPaperScissors.js"></script>
 </body>
