--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="strip">
-        <h1>Rock - Paper - Scissors</h1>
+        <h1>Rock Paper Scissors</h1>
     </div>
 
     <div class="container">
@@ -28,7 +28,18 @@
     </div>
 
     <div class="display">
-
+        <h3>
+            You chose <span class="playerSelection"></span> ||
+            Computer chose <span class="computerSelection"></span>
+        </h3>
+        <h2>
+            <span class="winLoseDraw">Make a selection!</span>
+        </h2>
+        <h2>
+            You: <span class="playerScore">0</span> ||
+            <span class="computerScore">0</span> :Computer
+        </h2>
+        <button class="reset">Reset</button>
     </div>
 
     <script type="text/javascript" src="rockPaperScissors.js"></script>
