add hard mode with lizard, spock

--- a/index.html
+++ b/index.html
@@ -13,17 +13,28 @@
 <body>
     <div class="strip">
         <h1>Rock Paper Scissors</h1>
+        <button class="hard-button">Hard</button>
     </div>
 
     <div class="container">
-        <div id="rock" class="choice">
-            <i class="far fa-hand-rock icon"></i>
+        <div class="basic">
+            <div id="rock" class="choice">
+                <i class="far fa-hand-rock icon"></i>
+            </div>
+            <div id="paper" class="choice">
+                <i class="far fa-hand-paper icon"></i>
+            </div>
+            <div id="scissors" class="choice">
+                <i class="far fa-hand-scissors icon"></i>
+            </div>
         </div>
-        <div id="paper" class="choice">
-            <i class="far fa-hand-paper icon"></i>
-        </div>
-        <div id="scissors" class="choice">
-            <i class="far fa-hand-scissors icon"></i>
+        <div class="hard hide">
+            <div id="lizard" class="choice">
+                <i class="far fa-hand-lizard icon"></i>
+            </div>
+            <div id="spock" class="choice">
+                <i class="far fa-hand-spock icon"></i>
+            </div>
         </div>
     </div>
 
